<resources>
    <string name="app_name">kw1_display_text</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="action_C">C</string>
    <string name="action_plus_minus">+/-</string>
    <string name="action_percent">%</string>
    <string name="action_div">/</string>
    <string name="action_mul">*</string>
    <string name="action_sub">-</string>
    <string name="action_sum">+</string>
    <string name="action_dot">.</string>
    <string name="action_eq">=</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Calculator</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first, this is Vlad</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>