<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="0dp"
        android:layout_height="15dp"
        app:layout_constraintBottom_toTopOf="@id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="628dp"
        android:text="@string/previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="412dp"
        android:layout_height="522dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

    <TableLayout
        android:id="@+id/tableLayout2">

        <TableRow
            android:layout_width="10dp"
            android:layout_height="110dp"
            android:background="#7C171717"
            android:clickable="true">

            <TextView
                android:id="@+id/text_result"
                android:textSize="90dp" />
        </TableRow>
    </TableLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="127dp">

            <Button
                android:id="@+id/btn_clear"
                android:onClick="onClickButtonCalc"
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D10B0B"
                android:text="@string/action_C"
                android:textSize="40dp" />

            <Button
                android:id="@+id/btn_plus_minus"
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D10B0B"
                android:text="@string/action_plus_minus"
                android:textSize="40dp" />

            <Button
                android:id="@+id/btn_percent"
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D10B0B"
                android:text="@string/action_percent"
                android:textSize="40dp" />

            <Button
                android:id="@+id/btn_div"
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D10B0B"
                android:text="@string/action_div"
                android:textSize="40dp"
                android:onClick="onClickButtonCalc"/>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="127dp">

            <Button
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D0254BD8"
                android:text="7"
                android:textSize="40dp" />

            <Button
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D0254BD8"
                android:text="8"
                android:textSize="40dp" />

            <Button
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D0254BD8"
                android:text="9"
                android:textSize="40dp" />

            <Button
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D10B0B"
                android:text="@string/action_mul"
                android:textSize="40dp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="127dp">

            <Button
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D0254BD8"
                android:text="4"
                android:textSize="40dp" />

            <Button
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D0254BD8"
                android:text="5"
                android:textSize="40dp" />

            <Button
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D0254BD8"
                android:text="6"
                android:textSize="40dp" />

            <Button
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D10B0B"
                android:text="@string/action_sub"
                android:textSize="40dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="127dp">

            <Button
                android:id="@+id/btn_one"
                android:onClick="onClickButtonCalc"
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D0254BD8"
                android:text="1"
                android:textSize="40dp" />

            <Button
                android:id="@+id/btn_two"
                android:onClick="onClickButtonCalc"
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D0254BD8"
                android:text="2"
                android:textSize="40dp" />

            <Button
                android:id="@+id/btn_three"
                android:onClick="onClickButtonCalc"
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D0254BD8"
                android:text="3"
                android:textSize="40dp" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D10B0B"
                android:onClick="onClickButtonCalc"
                android:text="@string/action_sum"
                android:textSize="40dp" />
        </TableRow>


    </TableLayout>

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="123dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="127dp">

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="202dp"
                android:layout_height="101dp"
                android:backgroundTint="#D0254BD8"
                android:clickable="true"
                android:text="0"
                android:textSize="40dp" />

            <Button
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D0254BD8"
                android:text="@string/action_dot"
                android:textSize="40dp" />

            <Button
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:backgroundTint="#D10B0B"
                android:text="@string/action_eq"
                android:textSize="40dp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>